apps/my-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: my-service
spec:
  selector:
    app: my-service
  ports:
  - port: 80
    targetPort: 8080
